--- a/proposal/bibliography.bib
+++ b/proposal/bibliography.bib
@@ -67,23 +67,6 @@
   url = {http://dblp.uni-trier.de/db/conf/aaai/aaai2016.html#CaoLX16},
   year = 2016
 }
-@Inbook{Maedche2003,
-author="Maedche, Alexander
-and Pekar, Viktor
-and Staab, Steffen",
-editor="Zhong, Ning
-and Liu, Jiming
-and Yao, Yiyu",
-title="Ontology Learning Part One --- on Discovering Taxonomic Relations from the Web",
-bookTitle="Web Intelligence",
-year="2003",
-publisher="Springer Berlin Heidelberg",
-address="Berlin, Heidelberg",
-pages="301--319",
-isbn="978-3-662-05320-1",
-doi="10.1007/978-3-662-05320-1_14",
-url="http://dx.doi.org/10.1007/978-3-662-05320-1_14"
-}
 @article{Sperduti1997,
 author = {Sperduti, Alessandro and Starita, Antonina},
 doi = {10.1109/72.572108},
@@ -155,25 +138,6 @@ year = {1997}
  address = {New York, NY, USA},
  keywords = {Ontology learning, application of ontologies, concept discovery, semantic relation acquisition, term recognition},
 } 
-@online{WikidataStats,
-	title={Wikidata Statistics},
-	url={\url{https://tools.wmflabs.org/wikidata-todo/stats.php}},
-	note={\url{https://tools.wmflabs.org/wikidata-todo/stats.php}},
-           urldate={2016-11-21}
-}
-@online{WikidataGame,
-	title={Wikidata Game},
-	url={\url{https://tools.wmflabs.org/wikidata-game/}},
-	note={\url{https://tools.wmflabs.org/wikidata-game/}},
-	urldate={2016-11-21}
-}
-@online{sergestratan,
-	author={Serge Stratan},
-	title={Wikidata Taxonomy Browser (beta)},
-	url={\url{http://sergestratan.bitbucket.org/}},
-	note={\url{http://sergestratan.bitbucket.org/}},
-	urldate={2016-11-27}
-}
 @INPROCEEDINGS{Zhang00neuralnetworks,
     author = {Guoqiang Peter Zhang},
     title = {Neural networks for classification: a survey},
@@ -192,20 +156,7 @@ year = {1997}
   timestamp = {Thu, 01 May 2014 14:56:20 +0200},
   biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/KalchbrennerGB14}
 }
-@article{GregorDGW15,
-  author    = {Karol Gregor and
-               Ivo Danihelka and
-               Alex Graves and
-               Daan Wierstra},
-  title     = {{DRAW:} {A} Recurrent Neural Network For Image Generation},
-  journal   = {CoRR},
-  volume    = {abs/1502.04623},
-  year      = {2015},
-  url       = {http://arxiv.org/abs/1502.04623},
-  timestamp = {Mon, 02 Mar 2015 14:17:34 +0100},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/GregorDGW15},
-}
-@inproceedings{Arisoy:2012:DNN:2390940.2390943,
+@inproceedings{Arisoy2012,
  author = {Arisoy, Ebru and Sainath, Tara N. and Kingsbury, Brian and Ramabhadran, Bhuvana},
  title = {Deep Neural Network Language Models},
  booktitle = {Proceedings of the NAACL-HLT 2012 Workshop: Will We Ever Really Replace the N-gram Model? On the Future of Language Modeling for HLT},
@@ -219,3 +170,13 @@ year = {1997}
  publisher = {Association for Computational Linguistics},
  address = {Stroudsburg, PA, USA},
 } 
+@article{Raghu2016,
+archivePrefix = {arXiv},
+arxivId = {1611.08083},
+author = {Raghu, Maithra and Poole, Ben and Kleinberg, Jon and Ganguli, Surya and Sohl-Dickstein, Jascha},
+eprint = {1611.08083},
+month = {nov},
+title = {{Survey of Expressivity in Deep Neural Networks}},
+url = {http://arxiv.org/abs/1611.08083},
+year = {2016}
+}
