Added similarity definition to related_work.

--- a/proposal/bibliography.bib
+++ b/proposal/bibliography.bib
@@ -170,13 +170,58 @@ year = {1997}
  publisher = {Association for Computational Linguistics},
  address = {Stroudsburg, PA, USA},
 } 
-@article{Raghu2016,
-archivePrefix = {arXiv},
-arxivId = {1611.08083},
-author = {Raghu, Maithra and Poole, Ben and Kleinberg, Jon and Ganguli, Surya and Sohl-Dickstein, Jascha},
-eprint = {1611.08083},
-month = {nov},
-title = {{Survey of Expressivity in Deep Neural Networks}},
-url = {http://arxiv.org/abs/1611.08083},
-year = {2016}
+@ARTICLE{Raghu2016,
+   author = {{Raghu}, M. and {Poole}, B. and {Kleinberg}, J. and {Ganguli}, S. and 
+	{Sohl-Dickstein}, J.},
+    title = "{On the expressive power of deep neural networks}",
+  journal = {ArXiv e-prints},
+archivePrefix = "arXiv",
+   eprint = {1606.05336},
+ primaryClass = "stat.ML",
+ keywords = {Statistics - Machine Learning, Computer Science - Artificial Intelligence, Computer Science - Learning},
+     year = 2016,
+    month = jun,
+   adsurl = {http://adsabs.harvard.edu/abs/2016arXiv160605336R},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+}
+@article{GregorDGW15,
+  author    = {Karol Gregor and
+               Ivo Danihelka and
+               Alex Graves and
+               Daan Wierstra},
+  title     = {{DRAW:} {A} Recurrent Neural Network For Image Generation},
+  journal   = {CoRR},
+  volume    = {abs/1502.04623},
+  year      = {2015},
+  url       = {http://arxiv.org/abs/1502.04623},
+  timestamp = {Mon, 02 Mar 2015 14:17:34 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/GregorDGW15},
+}
+@article{Scarselli2009,
+author = {Scarselli, F. and Gori, M. and {Ah Chung Tsoi} and Hagenbuchner, M. and Monfardini, G.},
+doi = {10.1109/TNN.2008.2005605},
+issn = {1045-9227},
+journal = {IEEE Transactions on Neural Networks},
+month = {jan},
+number = {1},
+pages = {61--80},
+title = {{The Graph Neural Network Model}},
+url = {http://ieeexplore.ieee.org/document/4700287/},
+volume = {20},
+year = {2009}
+}
+@inproceedings{Lin1998,
+ author = {Lin, Dekang},
+ title = {An Information-Theoretic Definition of Similarity},
+ booktitle = {Proceedings of the Fifteenth International Conference on Machine Learning},
+ series = {ICML '98},
+ year = {1998},
+ isbn = {1-55860-556-8},
+ pages = {296--304},
+ numpages = {9},
+ url = {http://dl.acm.org/citation.cfm?id=645527.657297},
+ acmid = {657297},
+ publisher = {Morgan Kaufmann Publishers Inc.},
+ address = {San Francisco, CA, USA},
 }
