--- a/data_analysis/results_20161107.md
+++ b/data_analysis/results_20161107.md
@@ -70,7 +70,7 @@ Bar graphs ignoring unlabeled root classes:
 ![labeled_subclass_sum]
 
 
-![property_frequency_sum] 
+![labeled_property_frequency_sum] 
 
 
 [instance sum]: https://github.com/AlexBaier/bachelorthesis/blob/master/data_analysis/output/instance_sum_20161107.png
